Drop _all mapping in template and index upgraders
This will allow users to upgrade to CrateDB 4.0+ without re-indexing
partitioned tables that have been created in CrateDB 2.x if all current
partitions were created in CrateDB 3.x.

This is a common case: Storing events partitioned by time, with a
retention period of e.g. 30 days. So after 30 days all partitions have
been rolled through.